Call another ant script.

--- a/run/build.xml
+++ b/run/build.xml
@@ -9,4 +9,9 @@
       <arg value="${version}"/>
     </exec>
   </target>
+
+  <target name="exec-pwd">
+    <exec executable="pwd">
+    </exec>
+  </target>
 </project>
